Fixed squished badges in benefits list

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -50,6 +50,7 @@ h2 {
   background: rgb(218, 238, 245);
     background: linear-gradient(135deg, rgba(218, 238, 245, 1) 50%, rgba(206, 232, 241, 1) 50%);
   border-radius: 50%;
+  flex: 0 0 42px
 }
 
 .offer-sidebar-button:hover {
